--- a/css/mediaquerystyle.css
+++ b/css/mediaquerystyle.css
@@ -1,5 +1,9 @@
 @media (max-width:1080px) {
-    
+    *{
+        /* font-size: 14px; */
+        margin: 0;
+        padding: 0;
+    }
     /* nav {
         position: relative;
      
@@ -101,6 +105,98 @@
 
     /* body mediaQuery now  */
     .firstsection{
-      
+        padding: 0 3%;
+        min-height: 80vh;
+        width: 100%;
+        /* justify-content: ; */
+
+        flex-direction: column-reverse;
+
     }
+    #textDetails{
+    
+        width: 90%;
+        height: 60%;   
+     
+        
+         
+        .text p {
+            font-size: 16px;
+        }
+    
+        .greenText {
+            color: #1cbe59;
+        }
+    
+        .purpleText {
+            color: #8067f0;
+        }
+    
+        .orangeText {
+            color: #f75023;
+            font-size: 18px;
+        }
+    
+    
+        .yellowText {
+            color: #f0c45c;
+        }
+    
+        .orangeBackground {
+            background-color: #fedfd7;
+        }
+    
+        .greenBackground {
+            background-color: #ddf5e6;
+        }
+    
+        .purpleBackground {
+            background-color: #ece8fd;
+        }
+    
+        .name {
+            font-size: 20px;
+        }
+    
+        .job {
+            font-size: 15px;
+        }
+    
+
+        
+    }
+    #avatar{
+        width: 90%;
+        margin-top: 90px;
+        margin-bottom: 0%;
+    }
+
+    .myForm{
+        /* margin-top: 20px; */
+        width: 100%;
+        height: 100%;
+        /* background-color: #ddf5e6; */
+        padding: 20px;
+        /* display: flex; */
+        /* flex-direction: row-reverse; */
+    }
+    .formcontainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .map iframe {
+        width: 100%;
+        height: 40vh;
+        border: 0;
+    }
+   
+    .portfiliocontent{
+        /* min-height: 100vh; */
+      
+            row-gap: 2rem;
+            grid-template-columns:repeat(1, 1fr);
+        
+    } 
 }
