--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -28,7 +28,7 @@ nav {
     padding: 10px 0;
 }
 
-nav ul {
+nav ul  {
     font-size: large;
     display: flex;
 
@@ -42,7 +42,7 @@ nav ul {
 }
 
 /* hover effects */
-nav ul li {
+nav ul li   {
     /* background-color: red; */
     border: 1px solid #e34;
     padding: 5px 10px;
@@ -69,11 +69,19 @@ nav ul li::before {
 
 }
 
-nav ul li:hover:before {
+nav ul li:hover::before {
     min-height: 100%;
     border-radius: 0;
 
 
+}
+nav ul li a{
+    text-decoration: none;
+    color: #e34;
+
+}
+nav ul li:hover > a{
+    color: white;
 }
 
 nav .menu-icons {
@@ -116,8 +124,9 @@ nav .menu-icons {
     height: 90%;
 } */
 .firstsection {
-    min-height: 100%;
+    
     width: 100%;
+    min-height: 100vh;
     /* background-color: bisque; */
     display: flex;
     align-items: center;
@@ -182,7 +191,7 @@ nav .menu-icons {
 #avatar {
 
     width: 75%;
-    height: auto;
+
     align-items: center;
     justify-content: center;
     /* border: 2px solid; */
@@ -190,8 +199,7 @@ nav .menu-icons {
     display: flex;
 
     img {
-        max-width: inherit;
-        max-height: inherit;
+
         height: inherit;
         width: inherit;
 
@@ -224,10 +232,7 @@ nav .menu-icons {
 
     width: 100%;
     height: 100vh;
-    /* background-color: bisque; */
-    /* display: flex; */
     align-items: center;
-    /* justify-content: space-between; */
     padding: 0 15%;
     justify-content: center;
 }
@@ -246,13 +251,11 @@ nav .menu-icons {
 
 .maincontent-about {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     padding-top: 10px;
 }
 
 .button2 {
-    /* margin: 0 auto; */
     width: 180px;
     height: 45px;
     font-family: inherit;
@@ -260,14 +263,11 @@ nav .menu-icons {
     font-weight: 500;
     color: #fff;
     cursor: pointer;
-    /* margin-bottom: 50px; */
     text-align: center;
     border: none;
-    /* background-image: radial-gradient(#f75023, #ed5252); */
     background-color: #e34;
     margin-top: 30px;
     transition: all .4s ease-in-out;
-    /* width: 100%; */
     margin-bottom: 10px;
 }
 
@@ -352,14 +352,14 @@ nav .menu-icons {
 
 }
 
-.container {
+.formcontainer {
     display: flex;
     gap: 2rem;
     width: 100%;
 }
 
 .contact-form {
-    width: 85%;
+    width: 100%;
     background-color: #fff;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -440,5 +440,57 @@ footer {
 .info-item p,
 .info-item a {
     font-size: 14px;
-    color: white;
+    /* color: white; */
+}
+.portfolio{
+    width: 100%;
+    /* height: 100vh; */
+    align-items: center;
+    /* padding: 0 15%; */
+    justify-content: center;
+    margin-top: 40px;
+    background-color: #ddf5e6;
+}
+
+.portfoliotitle h1{
+    padding-top: 5%;
+    margin-top: 40px;
+    text-align: center;
+}
+.portfiliocontent{
+    width: 100%;
+    /* background-color: #ccc; */
+    display: grid;
+    row-gap: 2rem;
+    grid-template-columns:repeat(3, 1fr);
+    place-items: center;
+   
+    
+    /* media query 
+        row-gap: 2rem;
+        grid-template-columns:repeat(1, 1fr);
+    */
+}
+.projectCard{
+    min-width: 300px;
+    min-height: 240px;
+    border-radius: 5px;
+    padding: 10px 20px;
+    border: 1px solid black;
+}
+.projectImage{
+    width: 100%;
+    height: 130px;
+    overflow: hidden;
+    img{
+        width: 100%;
+        height: 100%;
+        transition: .5s;
+    }
+    img:hover{
+        scale: 1.2;
+    }
+}
+.card-content{
+    text-align: center;
 }
